<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginBottom="2dp"
        android:background="@color/background"
        android:gravity="bottom"
        android:maxLength="11"
        android:paddingEnd="50dp"
        android:text="@string/zero"
        android:textAlignment="textEnd"
        android:textSize="50sp"
        tools:ignore="RtlCompat,RtlSymmetry" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:columnCount="4">


        <com.google.android.material.button.MaterialButton
           android:text="@string/clean"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="30sp"
            android:layout_width="75dp"
            android:layout_height="85dp"
            app:cornerRadius="20dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:backgroundTint="@color/additional_function"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.button.MaterialButton
            app:icon="@drawable/power_to_2"
            app:iconSize="25dp"
            app:iconTint="@color/black"
            android:paddingStart="25dp"
            android:layout_width="75dp"
            android:layout_height="85dp"
            app:cornerRadius="20dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/additional_function"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.button.MaterialButton
            app:icon="@drawable/power_to_y"
            app:iconSize="25dp"
            app:iconTint="@color/black"
            android:paddingStart="25dp"
            android:layout_width="75dp"
            android:layout_height="85dp"
            app:cornerRadius="20dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/additional_function"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.button.MaterialButton
            app:icon="@drawable/obelus"
            app:iconSize="23dp"
            app:iconTint="@color/black"
            android:paddingStart="25dp"
            android:layout_width="75dp"
            android:layout_height="85dp"
            app:cornerRadius="20dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/standart_function"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.button.MaterialButton
            app:icon="@drawable/fraction"
            app:iconSize="25dp"
            app:iconTint="@color/black"
            android:paddingStart="25dp"
            android:layout_width="75dp"
            android:layout_height="85dp"
            app:cornerRadius="20dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/additional_function"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.button.MaterialButton
            app:icon="@drawable/square_root_of_2"
            app:iconSize="30dp"
            app:iconTint="@color/black"
            android:paddingStart="20dp"
            android:layout_width="75dp"
            android:layout_height="85dp"
            app:cornerRadius="20dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/additional_function"
            tools:ignore="RtlSymmetry" />


        <com.google.android.material.button.MaterialButton
            app:icon="@drawable/square_root_of_y"
            app:iconSize="30dp"
            app:iconTint="@color/black"
            android:paddingStart="20dp"
            android:layout_width="75dp"
            android:layout_height="85dp"
            app:cornerRadius="20dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/additional_function"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.button.MaterialButton
            app:icon="@drawable/multiply"
            app:iconSize="25dp"
            app:iconTint="@color/black"
            android:paddingStart="25dp"
            android:layout_width="75dp"
            android:layout_height="85dp"
            app:cornerRadius="20dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/standart_function"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/selector_button_numbers"
            android:text="@string/seven"
            android:textSize="30sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/selector_button_numbers"
            android:text="@string/eight"
            android:textSize="30sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/selector_button_numbers"
            android:text="@string/nine"
            android:textSize="30sp" />

        <com.google.android.material.button.MaterialButton
            app:icon="@drawable/minus"
            app:iconSize="30dp"
            app:iconTint="@color/black"
            android:paddingStart="23dp"
            android:layout_width="75dp"
            android:layout_height="85dp"
            app:cornerRadius="20dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/standart_function"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/selector_button_numbers"
            android:text="@string/four"
            android:textSize="30sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/selector_button_numbers"
            android:text="@string/five"
            android:textSize="30sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/selector_button_numbers"
            android:text="@string/six"
            android:textSize="30sp" />

        <com.google.android.material.button.MaterialButton
            app:icon="@drawable/plus"
            app:iconSize="25dp"
            app:iconTint="@color/black"
            android:paddingStart="25dp"
            android:layout_width="75dp"
            android:layout_height="85dp"
            app:cornerRadius="20dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/standart_function"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/selector_button_numbers"
            android:text="@string/one"
            android:textSize="30sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/selector_button_numbers"
            android:text="@string/two"
            android:textSize="30sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/selector_button_numbers"
            android:text="@string/three"
            android:textSize="30sp" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="75dp"
            android:layout_height="130dp"
            android:layout_rowSpan="2"
            android:layout_gravity="fill_vertical"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/standart_function"
            android:paddingStart="28dp"
            app:cornerRadius="20dp"
            app:icon="@drawable/equals"
            app:iconSize="20dp"
            app:iconTint="@color/black"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="10dp"
            android:background="@drawable/selector_button_numbers"
            android:paddingStart="35dp"
            android:text="@string/zero"
            android:textAlignment="textStart"
            android:textSize="30sp"
            tools:ignore="RtlCompat,RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/selector_button_numbers"
            android:text="@string/comma"
            android:textSize="40sp" />

    </GridLayout>


</LinearLayout>
